# Netology_Part_9_QT

./: README.md
9_1/HelloGraphicWord/: CMakeLists.txt  main.cpp
9_10/TCPclient/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  structs.h  tcpclient.cpp  tcpclient.h
9_10/TCPserver/: CMakeLists.txt  tcpserver.cpp
9_2/: CMakeLists.txt  main.cpp
9_3/: CMakeLists.txt  dbsettingswindow.cpp  dbsettingswindow.h  dbsettingswindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
9_4/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
9_5/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
9_8/: CMakeLists.txt  database.cpp  database.h  dbdata.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
9_9/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
AirportInspector/: CMakeLists.txt  Readme.md  database.cpp  database.h  graphic.cpp  graphic.h  graphic.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  setup.cpp  setup.h
